Add: survey module, font Edit: some minor ui changes

--- a/Shoppingmall/Shoppingmall/Info.plist
+++ b/Shoppingmall/Shoppingmall/Info.plist
@@ -4,7 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Resources/Fonts/Graphik-Regular-Trial.otf</string>
+		<string>Graphik-Regular-Trial.otf</string>
+		<string>Graphik-Semibold-Trial.otf</string>
 	</array>
 </dict>
 </plist>
